fix unit test when cancel