@@ -297,7 +297,7 @@ class FirmDirectoryControllerTest {
         List<DisableUserReasonDto> reasonDtos = getDisableUserReasonDtos();
 
         MockHttpSession httpSession = new MockHttpSession();
-        httpSession.setAttribute("reasonIdSelected", String.valueOf(reasonDtos.get(0).getId()));
+        httpSession.setAttribute("reasonIdSelected", String.valueOf(reasonDtos.getFirst().getId()));
 
         when(firmService.getFirm(String.valueOf(id))).thenReturn(firm);
         when(userAccountStatusService.getDisableUserReasons(UserTypeReasonDisable.BULK_DISABLE)).thenReturn(reasonDtos);
@@ -306,7 +306,7 @@ class FirmDirectoryControllerTest {
 
         assertThat(result).isEqualTo("firm-directory/bulk-disable-user-reason");
         assertThat(model.getAttribute("firm")).isEqualTo(firm);
-        assertThat(model.getAttribute("reasonIdSelected")).isEqualTo(reasonDtos.get(0).getId());
+        assertThat(model.getAttribute("reasonIdSelected")).isEqualTo(reasonDtos.getFirst().getId());
         assertThat(model.getAttribute("disableUserReasonsForm")).isEqualTo(disableUserReasonForm);
     }
 
@@ -336,14 +336,14 @@ class FirmDirectoryControllerTest {
 
         MockHttpSession httpSession = new MockHttpSession();
         ExtendedModelMap disableUserReasonModel = new ExtendedModelMap();
-        disableUserReasonModel.addAttribute("reasonIdSelected", String.valueOf(reasonDtos.get(0).getId()));
+        disableUserReasonModel.addAttribute("reasonIdSelected", String.valueOf(reasonDtos.getFirst().getId()));
         httpSession.setAttribute("disableUserReasonModel", disableUserReasonModel);
 
         BindingResult bindingResult = Mockito.mock(BindingResult.class);
         when(bindingResult.hasErrors()).thenReturn(true);
 
         DisableUserReasonForm disableUserReasonForm = new DisableUserReasonForm();
-        disableUserReasonForm.setReasonId(String.valueOf(reasonDtos.get(0).getId()));
+        disableUserReasonForm.setReasonId(String.valueOf(reasonDtos.getFirst().getId()));
         UUID id = UUID.randomUUID();
         String result = firmDirectoryController.reasonForDisablePost(String.valueOf(id), disableUserReasonForm, bindingResult, model, httpSession);
 
@@ -360,7 +360,7 @@ class FirmDirectoryControllerTest {
         UUID id = UUID.randomUUID();
         MockHttpSession httpSession = new MockHttpSession();
         ExtendedModelMap disableUserReasonModel = new ExtendedModelMap();
-        disableUserReasonModel.addAttribute("reasonIdSelected", String.valueOf(reasonDtos.get(0).getId()));
+        disableUserReasonModel.addAttribute("reasonIdSelected", String.valueOf(reasonDtos.getFirst().getId()));
         FirmDto firmDto = FirmDto.builder()
                 .id(id)
                 .name("firmName")
@@ -377,7 +377,7 @@ class FirmDirectoryControllerTest {
 
         when(userAccountStatusService.getUserCountsForFirm(String.valueOf(id))).thenReturn(totals);
         DisableUserReasonForm disableUserReasonForm = new DisableUserReasonForm();
-        disableUserReasonForm.setReasonId(String.valueOf(reasonDtos.get(0).getId()));
+        disableUserReasonForm.setReasonId(String.valueOf(reasonDtos.getFirst().getId()));
         String result = firmDirectoryController.reasonForDisablePost(String.valueOf(id), disableUserReasonForm, bindingResult, model, httpSession);
 
         assertThat(result).isEqualTo("firm-directory/bulk-confirmation");
@@ -394,7 +394,7 @@ class FirmDirectoryControllerTest {
         List<DisableUserReasonDto> reasonDtos = getDisableUserReasonDtos();
 
         MockHttpSession httpSession = new MockHttpSession();
-        httpSession.setAttribute("reasonIdSelected", String.valueOf(reasonDtos.get(0).getId()));
+        httpSession.setAttribute("reasonIdSelected", String.valueOf(reasonDtos.getFirst().getId()));
 
         EntraUser disabledUser = EntraUser.builder()
                 .id(id)
@@ -408,7 +408,7 @@ class FirmDirectoryControllerTest {
 
         assertThat(result).isEqualTo(String.format("redirect:/admin/firmDirectory/%s", id));
 
-        verify(userAccountStatusService, times(1)).disableUserAllUserByFirmId(String.valueOf(id), reasonDtos.get(0).getId(), id);
+        verify(userAccountStatusService, times(1)).disableUserAllUserByFirmId(String.valueOf(id), reasonDtos.getFirst().getId(), id);
 
         assertThat(httpSession.getAttribute("disableUserReasonModel")).isNull();
 
@@ -428,19 +428,20 @@ class FirmDirectoryControllerTest {
         Assertions.assertThrows(RuntimeException.class,
                 () -> firmDirectoryController.confirmationBulkDisablePost(String.valueOf(id), model, redirectAttributes, session, authentication));
 
-        verify(userAccountStatusService, times(0)).disableUserAllUserByFirmId(String.valueOf(id), reasonDtos.get(0).getId(), id);
+        verify(userAccountStatusService, times(0)).disableUserAllUserByFirmId(String.valueOf(id), reasonDtos.getFirst().getId(), id);
     }
 
     @Test
     void cancelBulkUserDisable() {
         MockHttpSession httpSession = new MockHttpSession();
         ExtendedModelMap disableUserReasonModel = new ExtendedModelMap();
-        disableUserReasonModel.addAttribute("reasonIdSelected", String.valueOf("1"));
+        disableUserReasonModel.addAttribute("other", "other");
         httpSession.setAttribute("disableUserReasonModel", disableUserReasonModel);
+        httpSession.setAttribute("reasonIdSelected", "reasonIdSelected");
 
         String result = firmDirectoryController.cancelBulkUserDisable(httpSession);
 
-        assertThat(result).isEqualTo(String.format("redirect:/admin/firmDirectory"));
+        assertThat(result).isEqualTo("redirect:/admin/firmDirectory");
         assertThat(httpSession.getAttribute("disableUserReasonModel")).isNull();
         assertThat(httpSession.getAttribute("reasonIdSelected")).isNull();
     }
@@ -452,7 +453,7 @@ class FirmDirectoryControllerTest {
         List<DisableUserReasonDto> reasonDtos = getDisableUserReasonDtos();
 
         MockHttpSession httpSession = new MockHttpSession();
-        httpSession.setAttribute("reasonIdSelected", String.valueOf(reasonDtos.get(0).getId()));
+        httpSession.setAttribute("reasonIdSelected", String.valueOf(reasonDtos.getFirst().getId()));
 
         EntraUser disabledUser = EntraUser.builder()
                 .id(id)
@@ -462,7 +463,7 @@ class FirmDirectoryControllerTest {
 
         doThrow(new RuntimeException("Error processing bulk user"))
                 .when(userAccountStatusService)
-                .disableUserAllUserByFirmId(eq(String.valueOf(id)), eq(reasonDtos.get(0).getId()), eq(id));
+                .disableUserAllUserByFirmId(eq(String.valueOf(id)), eq(reasonDtos.getFirst().getId()), eq(id));
 
 
         RedirectAttributes redirectAttributes = new RedirectAttributesModelMap();
@@ -470,7 +471,7 @@ class FirmDirectoryControllerTest {
         Assertions.assertThrows(RuntimeException.class,
                 () -> firmDirectoryController.confirmationBulkDisablePost(String.valueOf(id), model, redirectAttributes, httpSession, authentication));
 
-        verify(userAccountStatusService, times(1)).disableUserAllUserByFirmId(String.valueOf(id), reasonDtos.get(0).getId(), id);
+        verify(userAccountStatusService, times(1)).disableUserAllUserByFirmId(String.valueOf(id), reasonDtos.getFirst().getId(), id);
 
     }
 
@@ -517,13 +518,12 @@ class FirmDirectoryControllerTest {
                 .description("A user request reason.")
                 .build();
 
-        List<DisableUserReasonDto> reasons = List.of(reason,
+        return List.of(reason,
                 complianceBreach,
                 contractEnded,
                 cyberRisk,
                 firmClosureMerger,
                 investigationPending,
                 userRequest);
-        return reasons;
     }
 }
